--- a/GoPass/css/main-section.css
+++ b/GoPass/css/main-section.css
@@ -5,21 +5,24 @@
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
-    position: absolute;
+    /* position: absolute; */
     margin: 0;
+    /* padding-top: 45vh; */
+
 }
 
-.home {
-    width: 70%;
-    height: 50vh;
-    margin-top: 15%;
-    padding-top: 5%;
-    margin-left: 2.5%;
+.main-section p{
+    position: absolute;
+    top: 5em;
+    padding: 1em;
+    margin: 0;
+    width: 80%;
     font-size: 55px;
     color: white;
     font-weight: bold;
     background-image: url("../img/fondo-Home.png");
     background-position: center;
     background-repeat: no-repeat;
-    background-size: 40%;
+    background-size: 30%;
 }
+
