--- a/GoPass/css/style.css
+++ b/GoPass/css/style.css
@@ -3,7 +3,9 @@ html {
 }
 
 body {
+
     margin: 0;
+    padding: 0;
     font-size: 13px;
 }
 
@@ -23,7 +25,7 @@ li {
 header {
     margin: 0;
     width: 100%;
-    height: 180px;
+
     display: flex;
     z-index: 10000;
     position: fixed;
