pagina Home termina, ha espera del footer, añadir estilos Boostrap

--- a/GoPass/css/style.css
+++ b/GoPass/css/style.css
@@ -28,7 +28,7 @@ header {
 
     display: flex;
     z-index: 10000;
-    position: fixed;
+    position: absolute;
     justify-content: space-between;
 }
 
