--- a/GoPass/css/info.css
+++ b/GoPass/css/info.css
@@ -2,6 +2,10 @@
     height: 100vh;
     display: flex;
     justify-content: space-between;
+    background-image: url("../img/WEB\ 2020\ GOPASS-25.png");
+    background-repeat: no-repeat;
+    background-position: right;
+    background-size: cover;
 }
 
 .info{
@@ -21,8 +25,13 @@
 }
 
 .info-img{
-    text-align: center;
-    background-color: red;
-    padding-top: 18%;
+    justify-content: center;
+    text-align: right;
     padding-left: 15%;
+}
+
+.info-img img{
+    width: 100%;
+    margin-top: 25%;
+
 }
