--- a/GoPass/css/main-section.css
+++ b/GoPass/css/main-section.css
@@ -1,28 +1,35 @@
 .main-section {
-    width: 100%;
     min-height: 100vh;
     background-image: url("../img/FondoMain.png");
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
-    /* position: absolute; */
-    margin: 0;
+    font-size: 48px;
+
+
     /* padding-top: 45vh; */
 
 }
 
-.main-section p{
+.overlay{
     position: absolute;
-    top: 5em;
-    padding: 1em;
-    margin: 0;
-    width: 80%;
-    font-size: 55px;
-    color: white;
-    font-weight: bold;
-    background-image: url("../img/fondo-Home.png");
+}
+
+
+ .overlay{
+    z-index: 1;
+    position: absolute;
+    top: 0%;
+    bottom: 0;
+    left: 0;
+    right: 0;
+
+    
+    /* backgroun
+    d-image: url("../img/fondo-Home.png");
     background-position: center;
     background-repeat: no-repeat;
-    background-size: 30%;
+    background-size: 20%;
+    color: white; */
 }
 
