--- a/GoPass/css/style.css
+++ b/GoPass/css/style.css
@@ -73,4 +73,19 @@ nav {
     width: 80%;
 }
 
+#home{
+    z-index: 1;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background-color: rgba(0, 0, 0, 0.5);
+    color: white;
+}
+
+#overlay{
+ 
+}
+
 /* ---------- Fin diseño del Nav para Web */
